Initial contents of the foundation files

--- a/Underwerld.UI/index.html
+++ b/Underwerld.UI/index.html
@@ -3,9 +3,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="content/style.css" />
+    <title>Underwerld</title>
 </head>
 <body>
-
+    <div id="game-container"></div>
+    <script src="js/main-entry-point.js"></script>
 </body>
 </html>
