Moved js classes into their own files. Created a ui component for capturing user commands. Player can now travel between cities. Error handler outputs to the game console.

--- a/Underwerld.UI/index.html
+++ b/Underwerld.UI/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="game-container"></div>
-    <script src="js/main-entry-point.js"></script>
+    <script type="module" src="js/main-entry-point.js"></script>
 </body>
 </html>
